# SBVA

./: CMakeLists.txt  README.md  sbvaConfig.cmake.in
.github/workflows/: main.yml
python/: GitSHA1.cpp
scripts/: build_norm.sh  build_sanitize.sh  build_static.sh
src/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.hpp  getdelim.h  getline.h  main.cpp  sbva.cc  sbva.cpp  sbva.h  test.cpp  time_mem.h
